--- a/ReimbursementApp/src/main/webapp/views/employee_view.html
+++ b/ReimbursementApp/src/main/webapp/views/employee_view.html
@@ -151,7 +151,7 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="../js/scripts.js" async></script>
+        <script src="../js/scripts.js"></script>
     </body>
 
 </html>
