--- a/ReimbursementApp/src/main/webapp/views/home.html
+++ b/ReimbursementApp/src/main/webapp/views/home.html
@@ -23,7 +23,7 @@
     </head>
 
     <body">
-        <div id="login">
+        <div id="employee-login-view">
             <!-- Nav tabs -->
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -33,6 +33,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <!--
                         <li class="nav-item active">
                             <a class="nav-link" href="../EmployeeServlet">
                                 Home <span class="sr-only">(current)</span>
@@ -43,6 +44,7 @@
                                 Contact Us!
                             </a>
                         </li>
+                        -->
 
                     </ul style="float:right">
                     <form class="search-form" action="https://google.com/search" method="get">
@@ -88,18 +90,19 @@
                 });
         </script> -->
 
-            <div class="jumbotron-fluid text-center customer-login" id="login">
-                <div class="container customer-login">
+        
+            <div class="jumbotron-fluid text-center employee-login" id="employee-login-form-container">
+                
+                <!--
+                <div class="container employee-login">
                     <h1>Reimbursements</h1>
-                    <!-- <p class="lead">Jumbo helper text</p> -->
-                    <!-- <p>More info</p> -->
+                    
                     <form class="form-signin text-center" action="../EmployeeServlet" enctype="multipart/form-data" method="POST">
                         <h1 class="h3 mb-3 font-weight-normal">Employee Sign In</h1>
 
                         <label for="inputEmail" class="sr-only">Email address</label>
                         <input type="text" name="username" id="username" class="form-control" placeholder="Username"
                             required autofocus>
-
                         <label for="inputPassword" class="sr-only">Password</label>
                         <input type="password" name="password" id="password" class="form-control" placeholder="Password"
                             required>
@@ -111,11 +114,13 @@
                         </div>
 
                         <button class="submit-btn btn btn-lg btn-block" type="submit" active>Sign in</button>
-                        <!-- add href="" to ^? -->
+                        
                     </form>
                 </div>
+                -->
             </div>
         </div>
+        
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -125,7 +130,7 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="../js/scripts.js" async></script>
+        <script src="../js/employee_login.js"></script>
         </body>
 
 </html>
