--- a/ReimbursementApp/src/main/webapp/styles/style.css
+++ b/ReimbursementApp/src/main/webapp/styles/style.css
@@ -1,5 +1,7 @@
 @import url('bootstrap.min.css');
 
+/* HTML TAGS */
+
 body {
     /* background: url("/Reimbursements/images/explorer_mountains_cropped.jpg") no-repeat center center fixed; */
     background: url("../images/explorer_mountains_cropped.jpg") no-repeat center center fixed;
@@ -11,14 +13,25 @@ body {
 
     font-family: 'Bree Serif', serif;
     font-display: white;
-    /* color: rgba(9, 50, 66, 0.966); */
+
     color: white;
 }
 
+/* NAV BAR */
+
 .navbar {
-    /*background: transparent;*/
-    /*border-color: transparent;*/
     background-color: rgba(47, 133, 167, 0.966);
+}
+.nav-item{
+    padding: 6px 9px 1px 6px;
+}
+.nav-item button[type="submit"]{
+    display: none;
+}
+.nav-link {
+    background:transparent; 
+    border-color:transparent;
+    color: white;
 }
 
 @media (max-width : 577px) {
@@ -57,6 +70,8 @@ body {
     background-color: rgba(52, 129, 230, 0.966);
 }
 
+/* CUSTOMER LOGIN */
+
 .employee-login-view {
     display: -ms-flexbox;
     display: -webkit-box;
@@ -71,16 +86,37 @@ body {
     background-color: #f5f5f5;
 }
 
+.jumbotron-fluid.employee-login {
+    margin: 0;
+    padding: 0;
+}
+
+.employee-login .container {
+
+    margin-top: 120px;
+    margin-bottom: 120px;
+
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
+    height: 425px;
+    
+	min-width: 475px;
+    max-width: 575px;
+    
+    background-color: rgba(47, 133, 167, 0.6);
+}
 .form-signin {
     width: 100%;
     max-width: 330px;
-    /*padding: 15px;*/
     margin: 0 auto;
 }
 
 .form-signin .checkbox {
     transform: scale(1.2);
-    font-size: 100%;
+    font-size: 90%;
     font-weight: 575;
 }
 
@@ -90,10 +126,6 @@ body {
     height: auto;
     padding: 10px;
     font-size: 16px;
-}
-
-.form-signin .form-control:focus {
-    z-index: 2;
 }
 
 .form-signin input[type="email"] {
@@ -109,11 +141,8 @@ body {
 }
 
 .submit-btn {
-    /* will change button font */
-    background-color: rgba(47, 133, 167, 0.966);
     background-color: rgba(47, 133, 167, 0.966);
     color: white;
-    /* color: blueviolet; */
 }
 
 .submit-btn:hover {
@@ -124,33 +153,8 @@ body {
     background-color: rgba(47, 133, 167, 0.966);
 }
 
-/* CUSTOMER LOGIN */
-.jumbotron-fluid.employee-login {
-    margin: 0;
-    padding: 0;
-    display: block;
-}
-
-.container.employee-login {
-    display: inline-block;
-
-    margin-top: 120px;
-    margin-bottom: 120px;
-
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-
-    height: 425px;
-    width: 50%;
-    min-width: 425px;
-    max-width: 575px;
-
-    background-color: rgba(47, 133, 167, 0.6);
-}
-
 /* REIMBURSEMENT VIEW */
+
 .jumbotron-fluid.reimbursement-view {
     color: white;
     margin-top: 40px;
@@ -203,8 +207,9 @@ input[type="file"]{
     margin-bottom: 16px;
     cursor: pointer;
     
-    -webkit-user-select: none; /* Safari 3.1+ */
-    user-select: none; /* Standard syntax */
+    /* Firefox and Edge Settings will mess stuff up... */
+    -webkit-user-select: none; /* Safari */
+    user-select: none; /* Standard */
     
     transform: scale(1.0);
 }
