--- a/ReimbursementApp/src/main/webapp/views/home.html
+++ b/ReimbursementApp/src/main/webapp/views/home.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -26,6 +26,7 @@
 
     <body">
         <div id="employee-login-view">
+            <div id="employee-alerts"></div>
             <!-- Nav tabs -->
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -142,7 +143,7 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="sweetalert2.all.min.js"></script>
+        <script src="../js/node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
         <script src="../js/employee_login.js"></script>
         </body>
 
