--- a/ReimbursementApp/src/main/webapp/views/employee_login.html
+++ b/ReimbursementApp/src/main/webapp/views/employee_login.html
@@ -25,8 +25,8 @@
     </head>
 
     <body">
+        <div id="employee-alerts"></div>
         <div id="employee-login-view">
-            <div id="employee-alerts"></div>
             <!-- Nav tabs -->
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -50,13 +50,13 @@
                         -->
 
                         <li class="nav-item">
-                            <form action="../EmployeeServlet" method="post">
+                            <form action="../EmployeeLogin" method="post">
                                 <label for="home">Home</label>
                                 <button id="home" name="home" value="home" class="nav-link" type="submit">
                             </form>
                         </li>
                         <li class="nav-item active last-child">
-                            <form action="../EmployeeServlet" method="post">
+                            <form action="../EmployeeLogin" method="post">
                                 <label for="contact">Contact Us!</label>
                                 <button id="contact" name="contact" value="contact" class="nav-link" type="submit">
                             </form>
@@ -74,16 +74,6 @@
                             </div>
                         </div>
                     </form>
-                    <!--
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownId">
-                                <a class="dropdown-item" href="#">Action 1</a>
-                                <a class="dropdown-item" href="#">Action 2</a>
-                                <a class="dropdown-item" href="#">Action 2</a>
-                            </div>
-                        </li>
-                    -->
                 </div>
             </nav>
 
