--- a/ReimbursementApp/.settings/org.eclipse.wst.common.component
+++ b/ReimbursementApp/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/java/com/servlets/webapp"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <property name="context-root" value="Reimbursements"/>
         <property name="java-output-path" value="/Reimbursements/target/classes"/>
     </wb-module>
