--- a/ReimbursementApp/src/main/java/com/servlets/webapp/views/employee_login.html
+++ b/ReimbursementApp/src/main/java/com/servlets/webapp/views/employee_login.html
@@ -21,7 +21,7 @@
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
         <!-- Customer CSS -->
-        <link href="../styles/style.css" rel="stylesheet">
+        <link href="../styles/employee_login.css" rel="stylesheet">
     </head>
 
     <body">
